--- a/css.css
+++ b/css.css
@@ -3,11 +3,30 @@ h1{
     text-align: center;
     padding-top: 15px;
     padding-bottom: 15px;
-    background-image: url("virus1.png");
+    background-image: url("virus.png");
     background-position: 5% 25%;
     opacity: 0.8;
     text-shadow: black 0.1em 0.1em 0.2em;
     color: white;
+}
+h2{
+    font-size: 17px;
+    text-align: justify;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-position: 5% 25%;
+    color: black;
+}
+h3{
+    font-size: 15px;
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    background-position: 5% 25%;
+    color: red;
+
 }
 .conteudo{
     margin-top: 15px;
